<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="100dp"
        android:layout_margin="60dp"

        android:layout_height="100dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <!-- Login as Student Button -->

        <Button
            android:id="@+id/btnStudent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/round_white"
            android:text="@string/login_as_student"
            android:textColor="@color/dark_blue_400" />

        <!-- Login as Teacher Button -->

        <Button
            android:id="@+id/btnTeacher"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/round_white"
            android:text="@string/login_as_teacher"
            android:textColor="@color/dark_blue_400" />

        <!-- Login as Admin Button -->

        <Button
            android:id="@+id/btnAdmin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/round_white"
            android:text="@string/login_as_admin"
            android:textColor="@color/dark_blue_400" />


        <!-- Login as Parent Button -->

        <Button
            android:id="@+id/btnParent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/round_white"
            android:text="@string/login_as_parent"
            android:textColor="@color/dark_blue_400" />

    </LinearLayout>

</LinearLayout>